# ComfyUI_HuggingFace_Downloader

./: .gitignore  HuggingFaceDownloadFolder.py  HuggingFaceDownloadModel.py  README.md  __init__.py  __init__.py.bak  backup.py  downloader.py  file_manager.py  model_discovery.py  node.json  parse_link.py  pyproject.toml  requirements.txt  restore_backup.py  tokenhandling.py  web_api.py
example_workflows/: Flux.json
js/: auto_download.js  backup.js  download_status_panel.js  hf_download.js  model_database.js  model_explorer.js  model_library.js  settings.js  top_menu.js
metadata/: manual-curation-overrides.json  popular-models.json
modules/: downloaders.py
nodes/: huggingface_downloader.py
scripts/: build_unified_models_db.py  lib_model_sources.py  scrape_priority_repos_to_popular_models.py
utils/: file_helpers.py
