[project]
name = "ComfyUI_HuggingFace_Downloader"
description = "Nodes for auto download models from Hugging Face using their filenames as part of workflows"
version = "0.73-beta"

dependencies = ["hf_transfer"]

[project.urls]
Repository = "https://github.com/jnxmx/ComfyUI_HuggingFace_Downloader"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "jnx"
DisplayName = "ComfyUI Hugging Face Downloader"
Icon = ""
